k8s/production/namespace.yaml
# k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: container-dashboard
